--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ menu:
     url:               /Mobile/
   - title:             OSCP(공부중)
     url:               /OSCP/
-  - title:             test3
+  - title:             공사중
     url:               /about/
 
 # Add links to the footer.
